edit folders and connect js files

--- a/index.html
+++ b/index.html
@@ -41,56 +41,55 @@
     </head>
 
     <body>
-    <p>Выберите алгоритм:</p>
+        <p>Выберите алгоритм:</p>
 
-    <div class="tab">
-    <button class="tablinks" onclick="openCity(event, '0')">А*</button>
-    <button class="tablinks" onclick="openCity(event, '1')">Алгоритм кластеризации</button>
-    <button class="tablinks" onclick="openCity(event, '2')">Генетический алгоритм</button>
-    <button class="tablinks" onclick="openCity(event, '3')">Муравьиный алгоритм</button>
-    <button class="tablinks" onclick="openCity(event, '4')">Дерево решений</button>
-    <button class="tablinks" onclick="openCity(event, '5')">Нейронная сеть</button>
-    </div>
+        <div class="tab">
+            <button class="tablinks" onclick="openCity(event, '0')">А*</button>
+            <button class="tablinks" onclick="openCity(event, '1')">Алгоритм кластеризации</button>
+            <button class="tablinks" onclick="openCity(event, '2')">Генетический алгоритм</button>
+            <button class="tablinks" onclick="openCity(event, '3')">Муравьиный алгоритм</button>
+            <button class="tablinks" onclick="openCity(event, '4')">Дерево решений</button>
+            <button class="tablinks" onclick="openCity(event, '5')">Нейронная сеть</button>
+        </div>
 
-    <div id="0" class="tabcontent">
-        <canvas> </canvas>
-    </div>
+        <div id="0" class="tabcontent">
+            <script src="/scripts/A_star/A_star.js"></script>
+        </div>
 
-    <div id="1" class="tabcontent">
+        <div id="1" class="tabcontent">
+            <script src="/scripts/clustering_algorithm/clustering_algorithm.js"></script>
+        </div>
 
-    </div>
+        <div id="2" class="tabcontent">
+            <script src="/scripts/genetic_algorithm/genetic_algorithm.js"></script>
+        </div>
 
-    <div id="2" class="tabcontent">
+        <div id="3" class="tabcontent">
+            <script src="/scripts/ant_algorithm/ant_algorithm.js"></script>
+        </div>
 
-    </div>
+        <div id="4" class="tabcontent">
+            <script src="/scripts/decision_tree/decision_tree.js"></script>
+        </div>
 
-    <div id="3" class="tabcontent">
+        <div id="5" class="tabcontent">
+            <script src="/scripts/neural_network/neural_network.js"></script>
+        </div>
 
-    </div>
-
-    <div id="4" class="tabcontent">
-
-    </div>
-
-    <div id="5" class="tabcontent">
-
-    </div>
-
-    <script>
-    function openCity(evt, cityName) {
-        var i, tabcontent, tablinks;
-        tabcontent = document.getElementsByClassName("tabcontent");
-        for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
-        }
-        tablinks = document.getElementsByClassName("tablinks");
-        for (i = 0; i < tablinks.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" active", "");
-        }
-        document.getElementById(cityName).style.display = "block";
-        evt.currentTarget.className += " active";
-    }
-    </script>
-
+        <script>
+            function openCity(evt, cityName) {
+                var i, tabcontent, tablinks;
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
+                }
+                tablinks = document.getElementsByClassName("tablinks");
+                for (i = 0; i < tablinks.length; i++) {
+                    tablinks[i].className = tablinks[i].className.replace(" active", "");
+                }
+                document.getElementById(cityName).style.display = "block";
+                evt.currentTarget.className += " active";
+            }
+        </script>
     </body>
 </html> 
