--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
         <style>
             body {font-family: Arial;}
 
@@ -33,63 +33,69 @@
             }
 
             .tabcontent {
+                position: relative;
                 display:none;
                 margin-left: 1%;
                 width: 60vw;
                 border: 1px solid #ccc;
                 border-top: none;
             }
+
+            .tabcontent button.runbutton {
+                position: absolute;
+                bottom: 5%;
+                right: 3%;
+            }
         </style>
+
+        <script src="/scripts/antAlgorithm/antAlgorithm.js"></script>
+        <script src="/scripts/aStar/aStar.js"></script>
+        <script src="/scripts/decisionTree/decisionTree.js"></script>
+        <script src="/scripts/geneticAlgorithm/geneticAlgorithm.js"></script>
+        <script src="/scripts/neuralNetwork/neuralNetwork.js"></script>
     </head>
 
     <body>
-
-        <div style="margin-top: 3%; margin-left: 1%;">Выберите алгоритм:</div>
-
         <div class="tab">
-            <button class="tablinks" onclick="openCity(event, '0')">А*</button>
-            <button class="tablinks" onclick="openCity(event, '1')">Алгоритм кластеризации</button>
-            <button class="tablinks" onclick="openCity(event, '2')">Генетический алгоритм</button>
-            <button class="tablinks" onclick="openCity(event, '3')">Муравьиный алгоритм</button>
-            <button class="tablinks" onclick="openCity(event, '4')">Дерево решений</button>
-            <button class="tablinks" onclick="openCity(event, '5')">Нейронная сеть</button>
+            <button class="tablinks" onclick="openTab(event, '0')">А*</button>
+            <button class="tablinks" onclick="openTab(event, '1')">Алгоритм кластеризации</button>
+            <button class="tablinks" onclick="openTab(event, '2')">Генетический алгоритм</button>
+            <button class="tablinks" onclick="openTab(event, '3')">Муравьиный алгоритм</button>
+            <button class="tablinks" onclick="openTab(event, '4')">Дерево решений</button>
+            <button class="tablinks" onclick="openTab(event, '5')">Нейронная сеть</button>
         </div>
 
         <div id="0" class="tabcontent">
             <canvas id = "canvas0"></canvas>
-            <script src="/scripts/A_star/A_star.js"></script>
+            <button class="runbutton" onclick="run()">Выполнить</button>
         </div>
 
         <div id="1" class="tabcontent">
             <canvas id = "canvas1"></canvas>
-            <script src="/scripts/clustering_algorithm/clustering_algorithm.js"></script>
+            <script src="/scripts/clusteringAlgorithm/clusteringAlgorithm.js"></script>
         </div>
 
         <div id="2" class="tabcontent">
-            <script src="/scripts/genetic_algorithm/genetic_algorithm.js"></script>
             <canvas id = "canvas2"></canvas>
 
         </div>
 
         <div id="3" class="tabcontent">
-            <script src="/scripts/ant_algorithm/ant_algorithm.js"></script>
             <canvas id = "canvas3", style="height: 40vw;"></canvas>
 
         </div>
 
         <div id="4" class="tabcontent">
-            <script src="/scripts/decision_tree/decision_tree.js"></script>
             <canvas id = "canvas4", style="height: 40vw;"></canvas>
 
         </div>
 
         <div id="5" class="tabcontent">
-            <script src="/scripts/neural_network/neural_network.js"></script>
             <canvas id = "canvas5", style="height: 40vw;"></canvas>
         </div>
         
         <script>
-            function openCity(evt, cityName) {
+            function openTab(evt, algorithmName) {
                 var i, tabcontent, tablinks;
                 tabcontent = document.getElementsByClassName("tabcontent");
                 for (i = 0; i < tabcontent.length; i++) {
@@ -99,7 +105,7 @@
                 for (i = 0; i < tablinks.length; i++) {
                     tablinks[i].className = tablinks[i].className.replace(" active", "");
                 }
-                document.getElementById(cityName).style.display = "inline-block";
+                document.getElementById(algorithmName).style.display = "inline-block";
                 evt.currentTarget.className += " active";
             }
         </script>
