--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         </div>
 
         <div id="astar" class="tab-content", style="background-color: rgb(182, 219, 234);">
-            <button class="button-run" onclick="run()"><font color="white">Запустить</font></button>
-            <canvas id = "canvas0", style="border-bottom: 2px solid #000; background-color: rgb(255, 255, 255);"></canvas>
-            <script src="/scripts/aStar/aStar.js"></script>
+            <button class="button-run" onclick="createMap(5, 5)"><font color="white">Запустить</font></button>
+            <canvas id = "astar-canvas"></canvas>
         </div>
 
         <div id="clusteringAlg" class="tab-content", style="background-color: rgb(182, 219, 234);">
