--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="/scripts/clusteringAlgorithm/clusteringAlgorithm.css" type="text/css">
 
         <!-- scripts -->
+        <script src="scripts\aStar\aStar.js"></script>
         <script src="/scripts/antAlgorithm/antAlgorithm.js"></script>
         <script src="/scripts/decisionTree/decisionTree.js"></script>
         <script src="/scripts/geneticAlgorithm/geneticAlgorithm.js"></script>
@@ -31,8 +32,10 @@
         </div>
 
         <div id="astar" class="tab-content", style="background-color: rgb(182, 219, 234);">
-            <script src="/scripts/aStar/aStar.js"></script>
-            <button class="button-run" onclick="createMap(50, 50)"><font color="white">Запустить</font></button>
+            <div id="astar-div">
+                
+            </div>
+            <button class="button-run" onclick="createMaze(50, 50)"><font color="white">Запустить</font></button>
         </div>
 
         <div id="clusteringAlg" class="tab-content", style="background-color: rgb(182, 219, 234);">
