--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="astar-div">
                 
             </div>
-            <button class="button-run" onclick="createMaze(50, 50)"><font color="white">Запустить</font></button>
+            <button class="button-run" onclick="createMazeAnimation(71, 71);"><font color="white">Запустить</font></button>
         </div>
 
         <div id="clusteringAlg" class="tab-content", style="background-color: rgb(182, 219, 234);">
