aStar final code

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
             <button id="run" class="btn" onclick="getMaze();">Сгенерировать лабиринт</button>
             <button id="edit" class="btn" onclick="editMaze()">Изменить лабиринт</button>
             <button id="editStart" class="btn">Изменить точку начала</button>
-            <div class="form-container">
-                <form>
-                    <input type="number" id="mazeSize" name="mazeSize" min="15" max="10000" required>
-                </form>                  
-              </div>
+            <div class="input">
+                <input type="number" class="form-input" id="size" placeholder="Значение" min="15" required="" />
+            </div>
         </div>
 
         <div id="clusteringAlg" class="tab-content", style="background-color: rgb(182, 219, 234);">
